2012-08-28 Max Baak <mbaak@cern.ch>
        * RooStats BUG Fix to _always_ use QTilde in AsymptoticCalculator.
        * HistFitter-00-00-13

2012-06-27 Max Baak <mbaak@cern.ch>
        * Added setup file for using eos at cern: setupeos.sh
        * HistFitter-00-00-12

2012-06-21 Evgeny Khramov <evgeniy.khramov@cern.ch>
  * Some beautification tuning of plots: legend, log scale, ATLAS and lumi labels are set permanently

2012-06-21 Dan Short <daniel.short@cern.ch>
	* Added new options for blinding
	* HistFitter-00-00-10

2012-06-14 David Cote <david.cote@cern.ch>
	* Macros clean-up by Max
	* New utility functions in configWriter/Manager
	* Extensively tested with HistFitterUser-00-00-01 for MET+jets+leptons
	* Tagging HistFitter-00-00-09
	
2012-06-08 David Cote <david.cote@cern.ch>
	* Only minor modifications to python/CombinedKFactorFit_5Channel.py
	* Tagging HistFitter-00-00-08 (not very significant)

2012-06-01 David Cote <david.cote@cern.ch>
	* Tag for SUSY approval of MET+jets+leptons on June 5th 2012
	* Tagging HistFitter-00-00-07

2012-05-30 David Cote <david.cote@cern.ch>
	* Tag for support note sent to EdBoard on 30.05.2012
	* Tagging HistFitter-00-00-06

2012-05-09 David Cote <david.cote@cern.ch>
	* Copy with some clean-up from atlasgrp/Physics/SUSY/Analyses/SusyFitter to
	  atlastest/Physics/SUSY/Analyses/HistFitter as a temporary work around to atlasgrp svn screw up
	* Tagging HistFitter-00-00-00

2012-04-26 David Cote <david.cote@cern.ch>
	* Non backward compatible change to configure input files from Jakub Adamek.
	Allows to attach input TFiles to systematic->sample->channel->TopLvl->configMgr in the usual logic. 
	Also see: https://groups.cern.ch/group/atlas-phys-susy-histfitter/Lists/Archive/Flat.aspx?RootFolder=%2Fgroup%2Fatlas-phys-susy-histfitter%2FLists%2FArchive%2Fnon-backward%20compatible%20change%20in%20input%20file%20configuration&FolderCTID=0x0120020041CC9DB0555187419FF9F5C61F43532C

2012-04-25 David Cote <david.cote@cern.ch>