@@ -10,7 +10,6 @@ Prioritized todo-list:
 >>> (At a minimum, let's try to do this before the post-mortem)
 
 - Upgrade to ROOT v5.34. xml-files okay? (Geert-Jan)
-- blinding (Tobias, David -- done?)
 - one-sided uncertainties (Max)
 - Treatment of negative QCD weights: can lead to crash in signal region. (Zach,Max)
 - Absolute errors in case of nominal prediction with 0.0 events. Empty nominal, non-empty systematic (Marcello)
@@ -117,7 +116,6 @@ David:
 - magic words for cmd line option. python -c "foo=True"
 - automated histogram fix (zero entries) --> configurable, logging info
 - swapping of one-sided up/down-systematics fixed? 
-- Blinding -> put in again.
 - Support for absolute errors. 
 - histograms as input: name specifiable, and -v2 option needs to be exact.
 - batch system support
